# deduplicate-text-datasets

./: Cargo.toml  README.md  requirements-tf.txt
scripts/: count_occurances.py  count_occurrences.py  deduplicate_single_file.sh  finish_dedup_lm1b.py  finish_dedup_wiki40b.py  finish_single_file.py  load_dataset.py  load_dataset_hf.py  make_suffix_array.py  run_pipeline.sh
src/: main.rs  table.rs
