[package]
name = "dedup_dataset" # the name of the package
version = "0.1.0"    # the current version, obeying semver

authors = ["Nicholas Carlini <nicholas@carlini.com>"]

[profile.dev]
opt-level = 3
overflow-checks = false  # Go FAAASSTTT!

[dependencies]
zstd = "0.5"
crossbeam = "0.3"
fasthash = "0.4"
filebuffer = "0.4"